--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>robert</groupId>
 	<artifactId>design-patterns</artifactId>
 	<version>1.0-SNAPSHOT</version>
+
 	<packaging>jar</packaging>
 
 	<name>design-patterns</name>
@@ -22,5 +23,17 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
